--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
   
-  <nav>
-    <ul>
-      <li>adsf</li>
-      <li>asdfadf</li>
-      <li>asdfaf</li>
-    </ul>
-  </nav>
+  <div class="container">
+    <div class="wrapper">
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+    </div>
+
+  </div>
 
   <div class="modal-window">
     <div class="modal-overlay">
