--- a/index.html
+++ b/index.html
@@ -3,28 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <title>Document</title>
 </head>
 <body>
+   
+
+  <nav>
+    <div class="nav-wrapper">
+    <ul class='nav-bar'>
+      <i class="fas fa-cloud"></i> 
+      <li class='nav-item'><a href="#">Creator</a></li>
+      <li class='nav-item'><a href="#">Contact</a></li>
+    </ul>
+  </div>
+
+  </nav>
+
+  <main>
+    <div class="search-layout">
+      <div class="container">
+        <div class="search-cards">
+
+        </div>
+        <div class="search-items">
+          <p> Enter your city</p>
+          <div class="search-sub">
+            <input type="text" class='search-subitem'>
+          <button class='search-button'>Search</button>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+    
+
+  </main>
   
-  <div class="container">
-    <div class="wrapper">
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-    </div>
+ 
 
-  </div>
 
-  <div class="modal-window">
-    <div class="modal-overlay">
-      <ul>
-        <li>
-          <a href="">dasf</a>
-          <a href="">daf</a>
-          <a href="">fadfa</a>
-        </li>
-      </ul>
-    </div>
-  </div>
+  <script src='js/app.js'></script>
 </body>
 </html>
