add fonts and txt

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="nav-wrapper">
       <div class="container">
         <div class="nav-block">
-      <a href="#" class="brand-logo right">Logo</a>
+      <a href="https://github.com/aftershockdev/Weather-App" target="_blank" class="brand-logo right">Weather app by aftershock666</a>
       <div class="search-items">
         <span class="search-name">City:</span>
         <div class="search-sub">
-          <input type="text" class='search-subitem' placeholder="Enter your city ">
+       <input type="text" class='search-subitem' placeholder="Enter your city ">
         <button class='search-button'>Search</button>
         </div>
         </div>
@@ -40,7 +40,7 @@
       </div>
     </div>
     </div>
-    
+    </div>
   </div>
   </main>
   
